RESOLVED FIXED39759
WidgetQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39759
Summary WidgetQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:23:59 PDT
WebCore/platform/qt/WidgetQt.cpp:41: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/WidgetQt.cpp:50: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/WidgetQt.cpp:52: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 1 files
Attachments
Patch that fixes the coding style issues (1.16 KB, patch)
2010-05-26 14:33 PDT, Anders Bakken
no flags
Patch (1.21 KB, patch)
2010-06-04 18:34 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:33:02 PDT
Created attachment 57139 [details] Patch that fixes the coding style issues
David Levin
Comment 2 2010-05-26 17:52:22 PDT
Comment on attachment 57139 [details] Patch that fixes the coding style issues > + > + No new tests. (OOPS!) You need to remove this. Instead in this case, it should say something like "No functionality change, so no new tests."
Petri Ojala
Comment 3 2010-05-26 21:40:30 PDT
QtTriaged
Anders Bakken
Comment 4 2010-06-04 18:34:13 PDT
WebKit Commit Bot
Comment 5 2010-06-04 22:39:49 PDT
Comment on attachment 57934 [details] Patch Clearing flags on attachment: 57934 Committed r60735: <http://trac.webkit.org/changeset/60735>
WebKit Commit Bot
Comment 6 2010-06-04 22:39:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.