2010-06-04  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        WidgetQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39759

        * platform/qt/WidgetQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60735 bbb929c8-8fbe-4397-9dbb-9b2b20218538