third_party/WebKit/WebCore/platform/qt/WidgetQt.cpp
@@ -38,19 +38,18 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "GraphicsContext.h"
 #include "HostWindow.h"
 #include "IntRect.h"
-#include "ScrollView.h"
 #include "NotImplemented.h"
 #include "QWebPageClient.h"
+#include "ScrollView.h"
 
 #include "qwebframe.h"
 #include "qwebframe_p.h"
 #include "qwebpage.h"
 
 #include <QCoreApplication>
-#include <QPainter>
-#include <QPaintEngine>
-
 #include <QDebug>
+#include <QPaintEngine>
+#include <QPainter>
 
 namespace WebCore {
 
